# beany

./: .gitignore  Cargo.toml  build.rs
al2o3/al2o3_platform-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  al2o3_platform.sln  al2o3_platform.vcxproj  al2o3_platform.vcxproj.filters  cmake_install.cmake
al2o3/al2o3_platform-build/al2o3_platform.dir/Debug/al2o3_platform.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  al2o3_platform.lastbuildstate
compute/: CMakeLists.txt
compute/compute_cuda/: CMakeLists.txt
compute/compute_cuda/src/: accelcuda.cu  accelcuda.h  compute_cuda.c
compute/compute_sycl/: CMakeLists.txt
compute/compute_sycl/src/: accelsycl.cpp  accelsycl.hpp
compute/out_libs/Debug/: al2o3_memory.lib  al2o3_platform.lib  compute_cuda.lib  compute_sycl.lib
cuda_compute/: CMakeLists.txt
cuda_compute/out_libs/Debug/: al2o3_platform.lib  compute_cuda.lib
cuda_compute/src/: compute_cuda.c
cuda_compute/tmp/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: main.rs
