[package]
name = "beany"
version = "0.1.0"
authors = ["Dean Calver <me@deanoc.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustacuda = "0.1.1"

[build-dependencies]
cmake = "0.1.42"
cuda-config = "0.1.0"
